// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renderer:list 1`] = `
<div>
  <div
    class="cxd-Page"
  >
    <div
      class="cxd-Page-content"
    >
      <div
        class="cxd-Page-main"
      >
        <div
          class="cxd-Page-body"
          role="page-body"
        >
          <div
            class="cxd-Service"
          >
            <div
              class="cxd-Panel cxd-Panel--default"
              data-role="container"
            >
              <div
                class="cxd-Panel-heading"
              >
                <h3
                  class="cxd-Panel-title"
                >
                  <span
                    class="cxd-TplField fr-view"
                  >
                    <span>
                      简单 List 示例
                    </span>
                  </span>
                </h3>
              </div>
              <div
                class="cxd-Panel-body"
              >
                <div
                  class="cxd-List"
                >
                  <div
                    class="cxd-List-content-wrapper"
                  >
                    <div
                      class="cxd-List-main"
                    >
                      <div
                        class="cxd-List-fixedTop"
                      />
                      <div
                        class="cxd-List-items"
                      >
                        <div
                          class="cxd-ListItem cxd-ListItem--actions-at-right cxd-ListItem--hasItemAction"
                          data-index="0"
                          style="scroll-margin-top: var(--affix-offset-top);"
                        >
                          <div
                            class="cxd-ListItem-actions"
                          >
                            <button
                              class="cxd-Button cxd-Button--link cxd-Button--size-sm"
                              type="button"
                            >
                              <span>
                                查看详情
                              </span>
                            </button>
                          </div>
                          <div
                            class="cxd-ListItem-content"
                          >
                            <div
                              class="cxd-Hbox cxd-Hbox--xs"
                            >
                              <div
                                class="cxd-Hbox-col"
                              >
                                <div
                                  class="cxd-ListItem-field"
                                >
                                  <label
                                    class="cxd-ListItem-fieldLabel"
                                  >
                                    Engine
                                  </label>
                                  <div
                                    class="cxd-ListItem-fieldValue"
                                  >
                                    <span
                                      class="cxd-PlainField"
                                    >
                                      Trident
                                    </span>
                                  </div>
                                </div>
                              </div>
                              <div
                                class="cxd-Hbox-col"
                              >
                                <div
                                  class="cxd-ListItem-field"
                                >
                                  <label
                                    class="cxd-ListItem-fieldLabel"
                                  >
                                    Version
                                  </label>
                                  <div
                                    class="cxd-ListItem-fieldValue"
                                  >
                                    <span
                                      class="cxd-PlainField"
                                    >
                                      4
                                    </span>
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                        <div
                          class="cxd-ListItem cxd-ListItem--actions-at-right cxd-ListItem--hasItemAction"
                          data-index="1"
                          style="scroll-margin-top: var(--affix-offset-top);"
                        >
                          <div
                            class="cxd-ListItem-actions"
                          >
                            <button
                              class="cxd-Button cxd-Button--link cxd-Button--size-sm"
                              type="button"
                            >
                              <span>
                                查看详情
                              </span>
                            </button>
                          </div>
                          <div
                            class="cxd-ListItem-content"
                          >
                            <div
                              class="cxd-Hbox cxd-Hbox--xs"
                            >
                              <div
                                class="cxd-Hbox-col"
                              >
                                <div
                                  class="cxd-ListItem-field"
                                >
                                  <label
                                    class="cxd-ListItem-fieldLabel"
                                  >
                                    Engine
                                  </label>
                                  <div
                                    class="cxd-ListItem-fieldValue"
                                  >
                                    <span
                                      class="cxd-PlainField"
                                    >
                                      Trident
                                    </span>
                                  </div>
                                </div>
                              </div>
                              <div
                                class="cxd-Hbox-col"
                              >
                                <div
                                  class="cxd-ListItem-field"
                                >
                                  <label
                                    class="cxd-ListItem-fieldLabel"
                                  >
                                    Version
                                  </label>
                                  <div
                                    class="cxd-ListItem-fieldValue"
                                  >
                                    <span
                                      class="cxd-PlainField"
                                    >
                                      4
                                    </span>
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                        <div
                          class="cxd-ListItem cxd-ListItem--actions-at-right cxd-ListItem--hasItemAction"
                          data-index="2"
                          style="scroll-margin-top: var(--affix-offset-top);"
                        >
                          <div
                            class="cxd-ListItem-actions"
                          >
                            <button
                              class="cxd-Button cxd-Button--link cxd-Button--size-sm"
                              type="button"
                            >
                              <span>
                                查看详情
                              </span>
                            </button>
                          </div>
                          <div
                            class="cxd-ListItem-content"
                          >
                            <div
                              class="cxd-Hbox cxd-Hbox--xs"
                            >
                              <div
                                class="cxd-Hbox-col"
                              >
                                <div
                                  class="cxd-ListItem-field"
                                >
                                  <label
                                    class="cxd-ListItem-fieldLabel"
                                  >
                                    Engine
                                  </label>
                                  <div
                                    class="cxd-ListItem-fieldValue"
                                  >
                                    <span
                                      class="cxd-PlainField"
                                    >
                                      Trident
                                    </span>
                                  </div>
                                </div>
                              </div>
                              <div
                                class="cxd-Hbox-col"
                              >
                                <div
                                  class="cxd-ListItem-field"
                                >
                                  <label
                                    class="cxd-ListItem-fieldLabel"
                                  >
                                    Version
                                  </label>
                                  <div
                                    class="cxd-ListItem-fieldValue"
                                  >
                                    <span
                                      class="cxd-PlainField"
                                    >
                                      4
                                    </span>
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                        <div
                          class="cxd-ListItem cxd-ListItem--actions-at-right cxd-ListItem--hasItemAction"
                          data-index="3"
                          style="scroll-margin-top: var(--affix-offset-top);"
                        >
                          <div
                            class="cxd-ListItem-actions"
                          >
                            <button
                              class="cxd-Button cxd-Button--link cxd-Button--size-sm"
                              type="button"
                            >
                              <span>
                                查看详情
                              </span>
                            </button>
                          </div>
                          <div
                            class="cxd-ListItem-content"
                          >
                            <div
                              class="cxd-Hbox cxd-Hbox--xs"
                            >
                              <div
                                class="cxd-Hbox-col"
                              >
                                <div
                                  class="cxd-ListItem-field"
                                >
                                  <label
                                    class="cxd-ListItem-fieldLabel"
                                  >
                                    Engine
                                  </label>
                                  <div
                                    class="cxd-ListItem-fieldValue"
                                  >
                                    <span
                                      class="cxd-PlainField"
                                    >
                                      Trident
                                    </span>
                                  </div>
                                </div>
                              </div>
                              <div
                                class="cxd-Hbox-col"
                              >
                                <div
                                  class="cxd-ListItem-field"
                                >
                                  <label
                                    class="cxd-ListItem-fieldLabel"
                                  >
                                    Version
                                  </label>
                                  <div
                                    class="cxd-ListItem-fieldValue"
                                  >
                                    <span
                                      class="cxd-PlainField"
                                    >
                                      3
                                    </span>
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                        <div
                          class="cxd-ListItem cxd-ListItem--actions-at-right cxd-ListItem--hasItemAction"
                          data-index="4"
                          style="scroll-margin-top: var(--affix-offset-top);"
                        >
                          <div
                            class="cxd-ListItem-actions"
                          >
                            <button
                              class="cxd-Button cxd-Button--link cxd-Button--size-sm"
                              type="button"
                            >
                              <span>
                                查看详情
                              </span>
                            </button>
                          </div>
                          <div
                            class="cxd-ListItem-content"
                          >
                            <div
                              class="cxd-Hbox cxd-Hbox--xs"
                            >
                              <div
                                class="cxd-Hbox-col"
                              >
                                <div
                                  class="cxd-ListItem-field"
                                >
                                  <label
                                    class="cxd-ListItem-fieldLabel"
                                  >
                                    Engine
                                  </label>
                                  <div
                                    class="cxd-ListItem-fieldValue"
                                  >
                                    <span
                                      class="cxd-PlainField"
                                    >
                                      Trident
                                    </span>
                                  </div>
                                </div>
                              </div>
                              <div
                                class="cxd-Hbox-col"
                              >
                                <div
                                  class="cxd-ListItem-field"
                                >
                                  <label
                                    class="cxd-ListItem-fieldLabel"
                                  >
                                    Version
                                  </label>
                                  <div
                                    class="cxd-ListItem-fieldValue"
                                  >
                                    <span
                                      class="cxd-PlainField"
                                    >
                                      4
                                    </span>
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                        <div
                          class="cxd-ListItem cxd-ListItem--actions-at-right cxd-ListItem--hasItemAction"
                          data-index="5"
                          style="scroll-margin-top: var(--affix-offset-top);"
                        >
                          <div
                            class="cxd-ListItem-actions"
                          >
                            <button
                              class="cxd-Button cxd-Button--link cxd-Button--size-sm"
                              type="button"
                            >
                              <span>
                                查看详情
                              </span>
                            </button>
                          </div>
                          <div
                            class="cxd-ListItem-content"
                          >
                            <div
                              class="cxd-Hbox cxd-Hbox--xs"
                            >
                              <div
                                class="cxd-Hbox-col"
                              >
                                <div
                                  class="cxd-ListItem-field"
                                >
                                  <label
                                    class="cxd-ListItem-fieldLabel"
                                  >
                                    Engine
                                  </label>
                                  <div
                                    class="cxd-ListItem-fieldValue"
                                  >
                                    <span
                                      class="cxd-PlainField"
                                    >
                                      Gecko
                                    </span>
                                  </div>
                                </div>
                              </div>
                              <div
                                class="cxd-Hbox-col"
                              >
                                <div
                                  class="cxd-ListItem-field"
                                >
                                  <label
                                    class="cxd-ListItem-fieldLabel"
                                  >
                                    Version
                                  </label>
                                  <div
                                    class="cxd-ListItem-fieldValue"
                                  >
                                    <span
                                      class="cxd-PlainField"
                                    >
                                      4
                                    </span>
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                        <div
                          class="cxd-ListItem cxd-ListItem--actions-at-right cxd-ListItem--hasItemAction"
                          data-index="6"
                          style="scroll-margin-top: var(--affix-offset-top);"
                        >
                          <div
                            class="cxd-ListItem-actions"
                          >
                            <button
                              class="cxd-Button cxd-Button--link cxd-Button--size-sm"
                              type="button"
                            >
                              <span>
                                查看详情
                              </span>
                            </button>
                          </div>
                          <div
                            class="cxd-ListItem-content"
                          >
                            <div
                              class="cxd-Hbox cxd-Hbox--xs"
                            >
                              <div
                                class="cxd-Hbox-col"
                              >
                                <div
                                  class="cxd-ListItem-field"
                                >
                                  <label
                                    class="cxd-ListItem-fieldLabel"
                                  >
                                    Engine
                                  </label>
                                  <div
                                    class="cxd-ListItem-fieldValue"
                                  >
                                    <span
                                      class="cxd-PlainField"
                                    >
                                      Gecko
                                    </span>
                                  </div>
                                </div>
                              </div>
                              <div
                                class="cxd-Hbox-col"
                              >
                                <div
                                  class="cxd-ListItem-field"
                                >
                                  <label
                                    class="cxd-ListItem-fieldLabel"
                                  >
                                    Version
                                  </label>
                                  <div
                                    class="cxd-ListItem-fieldValue"
                                  >
                                    <span
                                      class="cxd-PlainField"
                                    >
                                      5
                                    </span>
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                        <div
                          class="cxd-ListItem cxd-ListItem--actions-at-right cxd-ListItem--hasItemAction"
                          data-index="7"
                          style="scroll-margin-top: var(--affix-offset-top);"
                        >
                          <div
                            class="cxd-ListItem-actions"
                          >
                            <button
                              class="cxd-Button cxd-Button--link cxd-Button--size-sm"
                              type="button"
                            >
                              <span>
                                查看详情
                              </span>
                            </button>
                          </div>
                          <div
                            class="cxd-ListItem-content"
                          >
                            <div
                              class="cxd-Hbox cxd-Hbox--xs"
                            >
                              <div
                                class="cxd-Hbox-col"
                              >
                                <div
                                  class="cxd-ListItem-field"
                                >
                                  <label
                                    class="cxd-ListItem-fieldLabel"
                                  >
                                    Engine
                                  </label>
                                  <div
                                    class="cxd-ListItem-fieldValue"
                                  >
                                    <span
                                      class="cxd-PlainField"
                                    >
                                      Gecko
                                    </span>
                                  </div>
                                </div>
                              </div>
                              <div
                                class="cxd-Hbox-col"
                              >
                                <div
                                  class="cxd-ListItem-field"
                                >
                                  <label
                                    class="cxd-ListItem-fieldLabel"
                                  >
                                    Version
                                  </label>
                                  <div
                                    class="cxd-ListItem-fieldValue"
                                  >
                                    <span
                                      class="cxd-PlainField"
                                    >
                                      5
                                    </span>
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                        <div
                          class="cxd-ListItem cxd-ListItem--actions-at-right cxd-ListItem--hasItemAction"
                          data-index="8"
                          style="scroll-margin-top: var(--affix-offset-top);"
                        >
                          <div
                            class="cxd-ListItem-actions"
                          >
                            <button
                              class="cxd-Button cxd-Button--link cxd-Button--size-sm"
                              type="button"
                            >
                              <span>
                                查看详情
                              </span>
                            </button>
                          </div>
                          <div
                            class="cxd-ListItem-content"
                          >
                            <div
                              class="cxd-Hbox cxd-Hbox--xs"
                            >
                              <div
                                class="cxd-Hbox-col"
                              >
                                <div
                                  class="cxd-ListItem-field"
                                >
                                  <label
                                    class="cxd-ListItem-fieldLabel"
                                  >
                                    Engine
                                  </label>
                                  <div
                                    class="cxd-ListItem-fieldValue"
                                  >
                                    <span
                                      class="cxd-PlainField"
                                    >
                                      Gecko
                                    </span>
                                  </div>
                                </div>
                              </div>
                              <div
                                class="cxd-Hbox-col"
                              >
                                <div
                                  class="cxd-ListItem-field"
                                >
                                  <label
                                    class="cxd-ListItem-fieldLabel"
                                  >
                                    Version
                                  </label>
                                  <div
                                    class="cxd-ListItem-fieldValue"
                                  >
                                    <span
                                      class="cxd-PlainField"
                                    >
                                      5
                                    </span>
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                        <div
                          class="cxd-ListItem cxd-ListItem--actions-at-right cxd-ListItem--hasItemAction"
                          data-index="9"
                          style="scroll-margin-top: var(--affix-offset-top);"
                        >
                          <div
                            class="cxd-ListItem-actions"
                          >
                            <button
                              class="cxd-Button cxd-Button--link cxd-Button--size-sm"
                              type="button"
                            >
                              <span>
                                查看详情
                              </span>
                            </button>
                          </div>
                          <div
                            class="cxd-ListItem-content"
                          >
                            <div
                              class="cxd-Hbox cxd-Hbox--xs"
                            >
                              <div
                                class="cxd-Hbox-col"
                              >
                                <div
                                  class="cxd-ListItem-field"
                                >
                                  <label
                                    class="cxd-ListItem-fieldLabel"
                                  >
                                    Engine
                                  </label>
                                  <div
                                    class="cxd-ListItem-fieldValue"
                                  >
                                    <span
                                      class="cxd-PlainField"
                                    >
                                      Gecko
                                    </span>
                                  </div>
                                </div>
                              </div>
                              <div
                                class="cxd-Hbox-col"
                              >
                                <div
                                  class="cxd-ListItem-field"
                                >
                                  <label
                                    class="cxd-ListItem-fieldLabel"
                                  >
                                    Version
                                  </label>
                                  <div
                                    class="cxd-ListItem-fieldValue"
                                  >
                                    <span
                                      class="cxd-PlainField"
                                    >
                                      5
                                    </span>
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:list with itemAction 1`] = `
<body
  class="is-modalOpened"
  style="width: calc(100% - 0px);"
>
  <div>
    <div
      class="cxd-Page"
    >
      <div
        class="cxd-Page-content"
      >
        <div
          class="cxd-Page-main"
        >
          <div
            class="cxd-Page-body"
            role="page-body"
          >
            <div
              class="cxd-List"
            >
              <div
                class="cxd-List-content-wrapper"
              >
                <div
                  class="cxd-List-main"
                >
                  <div
                    class="cxd-List-fixedTop"
                  >
                    <div
                      class="cxd-List-heading"
                    >
                      listTitleForTest
                    </div>
                  </div>
                  <div
                    class="cxd-List-items"
                  >
                    <div
                      class="cxd-ListItem cxd-ListItem--actions-at-right cxd-ListItem--hasItemAction"
                      data-index="0"
                      style="scroll-margin-top: var(--affix-offset-top);"
                    >
                      <div
                        class="cxd-ListItem-content"
                      >
                        <div
                          class="cxd-ListItem-field"
                        >
                          <label
                            class="cxd-ListItem-fieldLabel"
                          >
                            Engine
                          </label>
                          <div
                            class="cxd-ListItem-fieldValue"
                          >
                            <span
                              class="cxd-PlainField"
                            >
                              Trident
                            </span>
                          </div>
                        </div>
                        <div
                          class="cxd-ListItem-field"
                        >
                          <label
                            class="cxd-ListItem-fieldLabel"
                          >
                            Version
                          </label>
                          <div
                            class="cxd-ListItem-fieldValue"
                          >
                            <span
                              class="cxd-PlainField"
                            >
                              4
                            </span>
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="cxd-ListItem cxd-ListItem--actions-at-right cxd-ListItem--hasItemAction"
                      data-index="1"
                      style="scroll-margin-top: var(--affix-offset-top);"
                    >
                      <div
                        class="cxd-ListItem-content"
                      >
                        <div
                          class="cxd-ListItem-field"
                        >
                          <label
                            class="cxd-ListItem-fieldLabel"
                          >
                            Engine
                          </label>
                          <div
                            class="cxd-ListItem-fieldValue"
                          >
                            <span
                              class="cxd-PlainField"
                            >
                              Trident
                            </span>
                          </div>
                        </div>
                        <div
                          class="cxd-ListItem-field"
                        >
                          <label
                            class="cxd-ListItem-fieldLabel"
                          >
                            Version
                          </label>
                          <div
                            class="cxd-ListItem-fieldValue"
                          >
                            <span
                              class="cxd-PlainField"
                            >
                              4
                            </span>
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="cxd-ListItem cxd-ListItem--actions-at-right cxd-ListItem--hasItemAction"
                      data-index="2"
                      style="scroll-margin-top: var(--affix-offset-top);"
                    >
                      <div
                        class="cxd-ListItem-content"
                      >
                        <div
                          class="cxd-ListItem-field"
                        >
                          <label
                            class="cxd-ListItem-fieldLabel"
                          >
                            Engine
                          </label>
                          <div
                            class="cxd-ListItem-fieldValue"
                          >
                            <span
                              class="cxd-PlainField"
                            >
                              Trident
                            </span>
                          </div>
                        </div>
                        <div
                          class="cxd-ListItem-field"
                        >
                          <label
                            class="cxd-ListItem-fieldLabel"
                          >
                            Version
                          </label>
                          <div
                            class="cxd-ListItem-fieldValue"
                          >
                            <span
                              class="cxd-PlainField"
                            >
                              4
                            </span>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="amis-dialog-widget cxd-Modal cxd-Modal--1th"
    role="dialog"
  >
    <div
      class="cxd-Modal-overlay in"
    />
    <div
      class="cxd-Modal-content in"
    >
      <div
        class="cxd-Modal-header"
      >
        <a
          class="cxd-Modal-close"
          data-position="left"
          data-tooltip="关闭"
        >
          <icon-mock
            classname="icon icon-close"
            icon="close"
          />
        </a>
        <div
          class="cxd-Modal-title"
        >
          详情
        </div>
      </div>
      <div
        class="cxd-Modal-body"
        role="dialog-body"
      >
        <span
          class="cxd-TplField fr-view"
        >
          <span>
            当前行的数据 browser: Internet Explorer 4.0, version: 4
          </span>
        </span>
      </div>
      <div
        class="cxd-Modal-footer"
      >
        <button
          class="cxd-Button cxd-Button--default cxd-Button--size-default"
          type="button"
        >
          <span>
            取消
          </span>
        </button>
        <button
          class="cxd-Button cxd-Button--primary cxd-Button--size-default"
          type="button"
        >
          <span>
            确认
          </span>
        </button>
      </div>
    </div>
  </div>
</body>
`;

exports[`Renderer:list with listItem actions & actionsPosition 1`] = `
<div>
  <div
    class="cxd-Page"
  >
    <div
      class="cxd-Page-content"
    >
      <div
        class="cxd-Page-main"
      >
        <div
          class="cxd-Page-body"
          role="page-body"
        >
          <div
            class="cxd-List"
          >
            <div
              class="cxd-List-content-wrapper"
            >
              <div
                class="cxd-List-main"
              >
                <div
                  class="cxd-List-fixedTop"
                />
                <div
                  class="cxd-List-items"
                >
                  <div
                    class="cxd-ListItem cxd-ListItem--actions-at-right"
                    data-index="0"
                    style="scroll-margin-top: var(--affix-offset-top);"
                  >
                    <div
                      class="cxd-ListItem-actions"
                    >
                      <button
                        class="cxd-Button cxd-Button--link cxd-Button--size-sm"
                        type="button"
                      >
                        <span>
                          查看详情
                        </span>
                      </button>
                    </div>
                    <div
                      class="cxd-ListItem-content"
                    >
                      <div
                        class="cxd-ListItem-field"
                      >
                        <label
                          class="cxd-ListItem-fieldLabel"
                        >
                          Engine
                        </label>
                        <div
                          class="cxd-ListItem-fieldValue"
                        >
                          <span
                            class="cxd-PlainField"
                          >
                            Trident
                          </span>
                        </div>
                      </div>
                      <div
                        class="cxd-ListItem-field"
                      >
                        <label
                          class="cxd-ListItem-fieldLabel"
                        >
                          Version
                        </label>
                        <div
                          class="cxd-ListItem-fieldValue"
                        >
                          <span
                            class="cxd-PlainField"
                          >
                            4
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="cxd-ListItem cxd-ListItem--actions-at-right"
                    data-index="1"
                    style="scroll-margin-top: var(--affix-offset-top);"
                  >
                    <div
                      class="cxd-ListItem-actions"
                    >
                      <button
                        class="cxd-Button cxd-Button--link cxd-Button--size-sm"
                        type="button"
                      >
                        <span>
                          查看详情
                        </span>
                      </button>
                    </div>
                    <div
                      class="cxd-ListItem-content"
                    >
                      <div
                        class="cxd-ListItem-field"
                      >
                        <label
                          class="cxd-ListItem-fieldLabel"
                        >
                          Engine
                        </label>
                        <div
                          class="cxd-ListItem-fieldValue"
                        >
                          <span
                            class="cxd-PlainField"
                          >
                            Trident
                          </span>
                        </div>
                      </div>
                      <div
                        class="cxd-ListItem-field"
                      >
                        <label
                          class="cxd-ListItem-fieldLabel"
                        >
                          Version
                        </label>
                        <div
                          class="cxd-ListItem-fieldValue"
                        >
                          <span
                            class="cxd-PlainField"
                          >
                            4
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="cxd-ListItem cxd-ListItem--actions-at-right"
                    data-index="2"
                    style="scroll-margin-top: var(--affix-offset-top);"
                  >
                    <div
                      class="cxd-ListItem-actions"
                    >
                      <button
                        class="cxd-Button cxd-Button--link cxd-Button--size-sm"
                        type="button"
                      >
                        <span>
                          查看详情
                        </span>
                      </button>
                    </div>
                    <div
                      class="cxd-ListItem-content"
                    >
                      <div
                        class="cxd-ListItem-field"
                      >
                        <label
                          class="cxd-ListItem-fieldLabel"
                        >
                          Engine
                        </label>
                        <div
                          class="cxd-ListItem-fieldValue"
                        >
                          <span
                            class="cxd-PlainField"
                          >
                            Trident
                          </span>
                        </div>
                      </div>
                      <div
                        class="cxd-ListItem-field"
                      >
                        <label
                          class="cxd-ListItem-fieldLabel"
                        >
                          Version
                        </label>
                        <div
                          class="cxd-ListItem-fieldValue"
                        >
                          <span
                            class="cxd-PlainField"
                          >
                            4
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:list with listItem avatar & avatarClassName 1`] = `
<div>
  <div
    class="cxd-Page"
  >
    <div
      class="cxd-Page-content"
    >
      <div
        class="cxd-Page-main"
      >
        <div
          class="cxd-Page-body"
          role="page-body"
        >
          <div
            class="cxd-List"
          >
            <div
              class="cxd-List-content-wrapper"
            >
              <div
                class="cxd-List-main"
              >
                <div
                  class="cxd-List-fixedTop"
                />
                <div
                  class="cxd-List-items"
                >
                  <div
                    class="cxd-ListItem cxd-ListItem--actions-at-right"
                    data-index="0"
                    style="scroll-margin-top: var(--affix-offset-top);"
                  >
                    <span
                      class="cxd-ListItem-avatar avatarClassNameForTest"
                    >
                      <img
                        alt="..."
                        src="/path/avatar/0"
                      />
                    </span>
                    <div
                      class="cxd-ListItem-content"
                    >
                      <div
                        class="cxd-ListItem-field"
                      >
                        <label
                          class="cxd-ListItem-fieldLabel"
                        >
                          Engine
                        </label>
                        <div
                          class="cxd-ListItem-fieldValue"
                        >
                          <span
                            class="cxd-PlainField"
                          >
                            Trident
                          </span>
                        </div>
                      </div>
                      <div
                        class="cxd-ListItem-field"
                      >
                        <label
                          class="cxd-ListItem-fieldLabel"
                        >
                          Version
                        </label>
                        <div
                          class="cxd-ListItem-fieldValue"
                        >
                          <span
                            class="cxd-PlainField"
                          >
                            4
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="cxd-ListItem cxd-ListItem--actions-at-right"
                    data-index="1"
                    style="scroll-margin-top: var(--affix-offset-top);"
                  >
                    <span
                      class="cxd-ListItem-avatar avatarClassNameForTest"
                    >
                      <img
                        alt="..."
                        src="/path/avatar/1"
                      />
                    </span>
                    <div
                      class="cxd-ListItem-content"
                    >
                      <div
                        class="cxd-ListItem-field"
                      >
                        <label
                          class="cxd-ListItem-fieldLabel"
                        >
                          Engine
                        </label>
                        <div
                          class="cxd-ListItem-fieldValue"
                        >
                          <span
                            class="cxd-PlainField"
                          >
                            Trident
                          </span>
                        </div>
                      </div>
                      <div
                        class="cxd-ListItem-field"
                      >
                        <label
                          class="cxd-ListItem-fieldLabel"
                        >
                          Version
                        </label>
                        <div
                          class="cxd-ListItem-fieldValue"
                        >
                          <span
                            class="cxd-PlainField"
                          >
                            4
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="cxd-ListItem cxd-ListItem--actions-at-right"
                    data-index="2"
                    style="scroll-margin-top: var(--affix-offset-top);"
                  >
                    <span
                      class="cxd-ListItem-avatar avatarClassNameForTest"
                    >
                      <img
                        alt="..."
                        src="/path/avatar/2"
                      />
                    </span>
                    <div
                      class="cxd-ListItem-content"
                    >
                      <div
                        class="cxd-ListItem-field"
                      >
                        <label
                          class="cxd-ListItem-fieldLabel"
                        >
                          Engine
                        </label>
                        <div
                          class="cxd-ListItem-fieldValue"
                        >
                          <span
                            class="cxd-PlainField"
                          >
                            Trident
                          </span>
                        </div>
                      </div>
                      <div
                        class="cxd-ListItem-field"
                      >
                        <label
                          class="cxd-ListItem-fieldLabel"
                        >
                          Version
                        </label>
                        <div
                          class="cxd-ListItem-fieldValue"
                        >
                          <span
                            class="cxd-PlainField"
                          >
                            4
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:list with listItem title & titleClassName & subTitle & desc 1`] = `
<div>
  <div
    class="cxd-Page"
  >
    <div
      class="cxd-Page-content"
    >
      <div
        class="cxd-Page-main"
      >
        <div
          class="cxd-Page-body"
          role="page-body"
        >
          <div
            class="cxd-List"
          >
            <div
              class="cxd-List-content-wrapper"
            >
              <div
                class="cxd-List-main"
              >
                <div
                  class="cxd-List-fixedTop"
                />
                <div
                  class="cxd-List-items"
                >
                  <div
                    class="cxd-ListItem cxd-ListItem--actions-at-right"
                    data-index="0"
                    style="scroll-margin-top: var(--affix-offset-top);"
                  >
                    <div
                      class="cxd-ListItem-content"
                    >
                      <p
                        class="cxd-ListItem-title classForItemTitle"
                      >
                        Win 95+
                      </p>
                      <div>
                        <small
                          class="cxd-ListItem-subtitle"
                        >
                          等级为：A
                        </small>
                      </div>
                      <span
                        class="cxd-TplField fr-view"
                      >
                        <span>
                          this is list item desc
                        </span>
                      </span>
                      <div
                        class="cxd-ListItem-field"
                      >
                        <label
                          class="cxd-ListItem-fieldLabel"
                        >
                          Engine
                        </label>
                        <div
                          class="cxd-ListItem-fieldValue"
                        >
                          <span
                            class="cxd-PlainField"
                          >
                            Trident
                          </span>
                        </div>
                      </div>
                      <div
                        class="cxd-ListItem-field"
                      >
                        <label
                          class="cxd-ListItem-fieldLabel"
                        >
                          Version
                        </label>
                        <div
                          class="cxd-ListItem-fieldValue"
                        >
                          <span
                            class="cxd-PlainField"
                          >
                            4
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="cxd-ListItem cxd-ListItem--actions-at-right"
                    data-index="1"
                    style="scroll-margin-top: var(--affix-offset-top);"
                  >
                    <div
                      class="cxd-ListItem-content"
                    >
                      <p
                        class="cxd-ListItem-title classForItemTitle"
                      >
                        Win 95+
                      </p>
                      <div>
                        <small
                          class="cxd-ListItem-subtitle"
                        >
                          等级为：B
                        </small>
                      </div>
                      <span
                        class="cxd-TplField fr-view"
                      >
                        <span>
                          this is list item desc
                        </span>
                      </span>
                      <div
                        class="cxd-ListItem-field"
                      >
                        <label
                          class="cxd-ListItem-fieldLabel"
                        >
                          Engine
                        </label>
                        <div
                          class="cxd-ListItem-fieldValue"
                        >
                          <span
                            class="cxd-PlainField"
                          >
                            Trident
                          </span>
                        </div>
                      </div>
                      <div
                        class="cxd-ListItem-field"
                      >
                        <label
                          class="cxd-ListItem-fieldLabel"
                        >
                          Version
                        </label>
                        <div
                          class="cxd-ListItem-fieldValue"
                        >
                          <span
                            class="cxd-PlainField"
                          >
                            4
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="cxd-ListItem cxd-ListItem--actions-at-right"
                    data-index="2"
                    style="scroll-margin-top: var(--affix-offset-top);"
                  >
                    <div
                      class="cxd-ListItem-content"
                    >
                      <p
                        class="cxd-ListItem-title classForItemTitle"
                      >
                        Win 95+
                      </p>
                      <div>
                        <small
                          class="cxd-ListItem-subtitle"
                        >
                          等级为：C
                        </small>
                      </div>
                      <span
                        class="cxd-TplField fr-view"
                      >
                        <span>
                          this is list item desc
                        </span>
                      </span>
                      <div
                        class="cxd-ListItem-field"
                      >
                        <label
                          class="cxd-ListItem-fieldLabel"
                        >
                          Engine
                        </label>
                        <div
                          class="cxd-ListItem-fieldValue"
                        >
                          <span
                            class="cxd-PlainField"
                          >
                            Trident
                          </span>
                        </div>
                      </div>
                      <div
                        class="cxd-ListItem-field"
                      >
                        <label
                          class="cxd-ListItem-fieldLabel"
                        >
                          Version
                        </label>
                        <div
                          class="cxd-ListItem-fieldValue"
                        >
                          <span
                            class="cxd-PlainField"
                          >
                            4
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:list with title & header & footer & headerClassName & footerClassName 1`] = `
<div>
  <div
    class="cxd-Page"
  >
    <div
      class="cxd-Page-content"
    >
      <div
        class="cxd-Page-main"
      >
        <div
          class="cxd-Page-body"
          role="page-body"
        >
          <div
            class="cxd-List"
          >
            <div
              class="cxd-List-content-wrapper"
            >
              <div
                class="cxd-List-main"
              >
                <div
                  class="cxd-List-fixedTop"
                >
                  <div
                    class="cxd-List-header headerTplClassName"
                  >
                    <span
                      class="cxd-TplField fr-view"
                    >
                      <span>
                        头部标题
                      </span>
                    </span>
                  </div>
                  <div
                    class="cxd-List-heading"
                  >
                    listTitleForTest
                  </div>
                </div>
                <div
                  class="cxd-List-placeholder"
                >
                  <span
                    class="cxd-TplField fr-view"
                  >
                    <span>
                      暂无数据
                    </span>
                  </span>
                </div>
                <div
                  class="cxd-List-footer footerButtonClassName"
                >
                  <button
                    class="cxd-Button cxd-Button--default cxd-Button--size-default"
                    type="button"
                  >
                    <span>
                      底部按钮
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
